--- a/vignettes/psqi.Rmd
+++ b/vignettes/psqi.Rmd
@@ -116,7 +116,7 @@ psqi_compute_comp7(keep_awake = data$psqi_08,
 If you want to add these directly to your data.frame, you can wrap then insire a `dplyr::mutate`.
 
 ```{r}
-data2 <- data %>% 
+data2 <- data |> 
   mutate(
     comp1 = psqi_06,
     comp2 = psqi_compute_comp2(min_before_sleep = psqi_02, 
@@ -125,7 +125,7 @@ data2 <- data %>%
     comp4 = psqi_compute_comp4(hours_sleep = psqi_04, 
                                bedtime = psqi_01, 
                                risingtime = psqi_03),
-    comp5 = psqi_compute_comp5(data = ., 
+    comp5 = psqi_compute_comp5(data = data, 
                                sleep_troubles = matches("^psqi_05[b-j]$")),
     comp6 = psqi_07,
     comp7 = psqi_compute_comp7(keep_awake = psqi_08, 
