--- a/vignettes/ehi.Rmd
+++ b/vignettes/ehi.Rmd
@@ -80,19 +80,19 @@ ehi_data
 ```
 
 ```{r}
-ehi_data |> 
+ehi_data %>% 
   ehi_compute_lq()
 ```
 
 These values can then be categorized into the two different laterality factors we have available.
 
 ```{r}
-ehi_data |> 
-  ehi_compute_lq() |> 
+ehi_data %>% 
+  ehi_compute_lq() %>% 
   ehi_factorise_lq()
 
-ehi_data |> 
-  ehi_compute_lq() |> 
+ehi_data %>% 
+  ehi_compute_lq() %>% 
   ehi_factorise_lqa()
 ```
 
@@ -101,7 +101,7 @@ In most cases, people will want to add the data derived from the `ehi` functions
 This is in most cases best done using `dplyr::mutate`.
 
 ```{r}
-ehi_data |> 
+ehi_data %>% 
   mutate(
     ehi_lq = ehi_compute_lq(ehi_data),
     ehi_nominal = ehi_factorise_nominal(ehi_01),
@@ -113,7 +113,7 @@ ehi_data |>
 Because this is a little cumbersome to remember, a convenience function is made that will add columns using this naming convention.
 
 ```{r}
-ehi_data |> 
+ehi_data %>% 
   ehi_compute()
 ```
 
